--- a/package.json
+++ b/package.json
@@ -20,10 +20,43 @@
   },
   "homepage": "https://github.com/entcore/entcore#readme",
   "dependencies": {
+    "infra-components": "github:web-education/infra-components#dev",
+    "sijil": "github:web-education/sijil.js",
+    "@angular/common": "~2.1.1",
+    "@angular/compiler": "~2.1.1",
+    "@angular/core": "~2.1.1",
+    "@angular/forms": "~2.1.1",
+    "@angular/http": "~2.1.1",
+    "@angular/platform-browser": "~2.1.1",
+    "@angular/platform-browser-dynamic": "~2.1.1",
+    "@angular/router": "~3.1.1",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.25"
+  },
+  "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.45",
+    "axios": "^0.15.2",
+    "concurrently": "^3.0.0",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-bower": "0.0.13",
+    "gulp-changed": "^1.3.2",
     "gulp-clean": "^0.3.2",
+    "gulp-less": "^3.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.1.2",
     "gulp-rev-replace": "^0.4.3",
+    "gulp-sass": "^2.3.2",
+    "gulp-typescript": "^3.1.2",
+    "gulp-watch": "^4.3.10",
+    "html-webpack-plugin": "^2.24.1",
+    "merge2": "^1.0.2",
     "source-map-loader": "^0.1.5",
+    "ts-loader": "^1.1.0",
+    "typescript": "^2.0.8",
     "webpack-stream": "^3.2.0"
   }
 }
