--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
   "homepage": "https://github.com/entcore/entcore#readme",
   "dependencies": {
     "infra-components": "github:web-education/infra-components#dev",
+    "toolkit": "github:entcore/toolkit#dev",
     "sijil": "github:web-education/sijil.js",
-    "@angular/common": "~2.3.0",
-    "@angular/compiler": "~2.3.0",
-    "@angular/core": "~2.3.0",
-    "@angular/forms": "~2.3.0",
-    "@angular/http": "~2.3.0",
-    "@angular/platform-browser": "~2.3.0",
-    "@angular/platform-browser-dynamic": "~2.3.0",
-    "@angular/router": "~3.3.0",
+    "@angular/common": "~4.0.0-beta.6",
+    "@angular/compiler": "~4.0.0-beta.6",
+    "@angular/core": "~4.0.0-beta.6",
+    "@angular/forms": "~4.0.0-beta.6",
+    "@angular/http": "~4.0.0-beta.6",
+    "@angular/platform-browser": "~4.0.0-beta.6",
+    "@angular/platform-browser-dynamic": "~4.0.0-beta.6",
+    "@angular/router": "~4.0.0-beta.6",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-rc.4",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
